<resources>

    <string name="app_name">UI Generic</string>

    <string name="action_save">Save</string>
    <string name="action_edit">Edit</string>
    <string name="action_restore">Restore</string>
    <string name="action_delete">Delete</string>
    <string name="action_remove">Remove</string>
    <string name="action_remove_all">Remove All</string>
    <string name="action_sort">Sort</string>
    <string name="action_sort_as_is">As is</string>
    <string name="action_sort_name">Name</string>
    <string name="action_sort_name_ignore_case">Name ignore case</string>
    <string name="action_sort_name_natural">Name natural sort</string>
    <string name="action_sort_reverse">Reverse</string>

    <string name="button_sample">Sample</string>
    <string name="button_sample_server">Sample Server</string>
    <string name="button_settings">Settings</string>
    <string name="button_about">About</string>

    <string name="settings_title">Settings</string>
    <string-array name="settings_database_entries">
        <item>Internal</item>
        <item>External</item>
    </string-array>
    <string-array name="settings_database_entry_values">
        <item>0</item>
        <item>1</item>
    </string-array>

    <string name="search_hint">Search</string>

    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>

    <string name="about_dialog_title">About</string>
    <string name="about_dialog_message">UI Generic, version</string>
    <string name="about_dialog_positive">Close</string>

    <string name="version">2.0.2</string>

</resources>
