...
    <string name="sample_discard_dialog_message">Discard changes?</string>
    <string name="sample_discard_dialog_positive">Yes</string>
    <string name="sample_discard_dialog_negative">No</string>

    <string name="sample_remove_dialog_title">Confirm</string>
    <string name="sample_remove_dialog_message">Delete this data?</string>
    <string name="sample_remove_dialog_positive">Yes</string>
    <string name="sample_remove_dialog_negative">No</string>

    <string name="sample_remove_selected_dialog_title">Confirm</string>
    <string name="sample_remove_selected_dialog_message">Delete selected data?</string>
    <string name="sample_remove_selected_dialog_positive">Yes</string>
    <string name="sample_remove_selected_dialog_negative">No</string>
...
